# weblit

./: .env  .env-example  .gitignore  404.html  Dockerfile  Dockerfile.prod  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  server.js
app/: main.py
app/api/: dependency.py
app/api/v1/: auth.py  (+4 more)
app/core/: config.py  exceptions.py  security.py
app/db/: config.py  mongo.py  qdrant.py  redis.py
app/enums/: paper_filter.py  paper_source.py
app/models/: fulltext.py  novelty_check.py  paper.py  user.py
app/schemas/: fulltext.py  novelty.py  paper.py  user.py
app/services/: auth_service.py  email_service.py  embedding_service.py  fulltext_fetcher.py  fulltext_ingestion_service.py  fulltext_service.py  ingestion_service.py  novelty_service.py  otp_service.py  search_service.py
app/sources/: base.py
client/: angular.json  package-lock.json  package.json
client-v2/: README.md  package-lock.json  package.json
controllers/: authController.js  chatController.js  researchController.js  userController.js
errors/: notFound.js  unauthenticated.js
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
middleware/: auth.js  authMiddleware.js
models/: Chat.js  FilterQuery.js  PrimaryStudies.js  Research.js  ResearchPapers.js  SystematicReview.js  User.js
qdrant/: config.yaml
routes/: authRoutes.js  chatRoutes.js  researchRoutes.js  userRoutes.js
tests/: conftest.py
utils/: filterScholarResponse.js  openAiRequest.js  tokenUtils.js  webScrapper.js
(+153 files in other folders)
